<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_detail_scene"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size200dp"
        android:contentDescription="@string/image"
        android:scaleType="fitCenter"
        android:transitionName="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size8dp"
        android:layout_marginTop="@dimen/size8dp"
        android:layout_marginEnd="@dimen/size8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:transitionName="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        tools:text="@tools:sample/full_names" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedDeskirpsi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <TextView
            android:id="@+id/deskirpsi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/size8dp"
            android:transitionName="@string/deskirpsi" />
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.motion.widget.MotionLayout>